--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -75,22 +75,11 @@ jobs:
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-         docker rmi `docker images -q`
-          sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php* android*
-          sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf swig
-          sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get clean
-          sudo mkdir -p -m 777 /mnt/openwrt/bin /mnt/openwrt/build_dir/host /mnt/openwrt/build_dir/hostpkg /mnt/openwrt/dl /mnt/openwrt/feeds /mnt/openwrt/staging_dir
-          ln -s /mnt/openwrt/bin ./bin
-          mkdir -p ./build_dir
-          ln -s -f /mnt/openwrt/build_dir/host ./build_dir/host
-          ln -s -f /mnt/openwrt/build_dir/hostpkg ./build_dir/hostpkg
-          ln -s /mnt/openwrt/dl ./dl
-          ln -s /mnt/openwrt/feeds ./feeds
-          ln -s /mnt/openwrt/staging_dir ./staging_dir
-          df -h
+         sudo rm -rf /swapfile /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+         sudo -E apt-get -qq update
+         sudo -E apt-get -qq install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf
+         sudo -E apt-get -qq autoremove --purge
+         sudo -E apt-get -qq clean
 
     
     - name: Get current date
@@ -147,7 +136,7 @@ jobs:
           /bin/bash "devices/${{matrix.target}}/$DIY_SH"
         )
         fi
-         mv devices/${{matrix.target}}/$CONFIG_FILE .config
+         #mv devices/${{matrix.target}}/$CONFIG_FILE .config
         if [ -f "devices/common/default-settings" ]; then
          cp -f devices/common/default-settings package/lean/default-settings/files/zzz-default-settings
         fi
