--- a/devices/x86_64/settings.ini
+++ b/devices/x86_64/settings.ini
@@ -1,4 +1,4 @@
-REPO_URL="https://github.com/KFERMercer/OpenWrt"
+REPO_URL="https://github.com/coolsnowwolf/lede"
 REPO_BRANCH="master"
 CONFIG_FILE=".config"
 DIY_SH="diy.sh"
